# ZeroLLM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  cliff.toml  pyproject.toml  registry.json
examples/: agent_multi_tool.py  agent_sub_agents.py  agent_tools.py  basic_chat.py  chat_memory.py  chat_streaming.py  chat_system_prompt.py  dataloader_usage.py  embed_basic.py  finetune_csv.py  finetune_jsonl.py  hardware_detect.py  power_control.py  rag_custom_embedding.py  rag_docs.py  rag_search.py  recommend_model.py  serve_api.py  serve_finetuned.py  serve_with_openai_client.py
scripts/: release.sh
tests/: test_agent.py  test_backend.py  test_chat.py  test_cli.py  test_dataloader.py  test_downloader.py  test_embed.py  test_finetune.py  test_hardware.py  test_memory.py  test_rag.py  test_registry.py  test_resolver.py  test_server.py
zerollm/: __init__.py  agent.py  backend.py  chat.py  cli.py  dataloader.py  downloader.py  embed.py  finetune.py  hardware.py  memory.py  rag.py  registry.py  resolver.py  server.py
