[project]
name = "zerollm-kit"
version = "0.1.8"
description = "Zero setup, zero config — the easiest Python API for local LLMs on any hardware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nilesh Verma" },
]
keywords = ["llm", "local", "inference", "fine-tuning", "agents", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Inference + Fine-tuning (HuggingFace transformers — one backend for everything)
    "torch",
    "transformers",
    "accelerate",
    "peft",
    "datasets",
    "bitsandbytes; sys_platform == 'linux'",
    # Model downloads
    "huggingface_hub",
    "tokenizers",
    # Hardware detection
    "psutil",
    # API server
    "fastapi",
    "uvicorn",
    # Data loading
    "pymupdf",
    "python-docx",
    # RAG (SQLite-based)
    "sqlite-vec",
    "sentence-transformers",
    # CLI & UI
    "rich",
    "typer",
]

[project.scripts]
zerollm = "zerollm.cli:app"

[project.urls]
Homepage = "https://github.com/TechyNilesh/ZeroLLM"
Repository = "https://github.com/TechyNilesh/ZeroLLM"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zerollm"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100
